--- a/app/globals.css
+++ b/app/globals.css
@@ -140,3 +140,11 @@ input[type="button"],
 .no-scrollbar::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
+
+body {
+  @apply bg-white text-black transition-colors duration-300;
+}
+
+.dark body {
+  @apply bg-zinc-950 text-white;
+}
