--- a/app/globals.css
+++ b/app/globals.css
@@ -181,3 +181,10 @@ body.modal-open {
     background-position: 0% 50%;
   }
 }
+
+.bg-primary {
+  @apply bg-white dark:bg-gray-800;
+}
+.text-primary {
+  @apply text-black dark:text-white;
+}
