--- a/app/globals.css
+++ b/app/globals.css
@@ -220,3 +220,10 @@ svg.defs {
   color: transparent;
   font-weight: 500;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
